--- a/scripts/scan/ps_configs.yml
+++ b/scripts/scan/ps_configs.yml
@@ -1,3 +1,196 @@
+evolve: 
+
+    run_configs: 
+        # Approximate 
+        - 'srp-timing-gpu'
+        - 'exact-timing-gpu' 
+        - 'float32-timing-gpu'  
+        - 'f32-srp-timing-gpu'
+
+
+    configs: {
+
+        # Approximate
+        'f32-srp-timing-gpu': {
+            'exe': ['PS_main.py'],
+            'particles': [16000000],
+            'bunches': [21],  # 192
+
+            'slices': [256],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [50],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [3],
+            'approx': [1],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [1],
+            'workers': [1],
+            'omp': [16],
+            'mpi': ['openmpi4'],
+            'time': [60],
+            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
+            'cores_per_cpu': [16, 16]
+
+            'repeats': 3
+        },
+
+
+        'f32-rds-timing-gpu': {
+            'exe': ['PS_main.py'],
+            'particles': [16000000],
+            'bunches': [21],  # 192
+
+            'slices': [256],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [50],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [2],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [1],
+            'workers': [1],
+            'omp': [16],
+            'mpi': ['openmpi4'],
+            'time': [60],
+            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
+            'cores_per_cpu': [16, 16]
+
+            'repeats': 3
+        },
+
+
+        'srp-timing-gpu': {
+            'exe': ['PS_main.py'],
+            'particles': [16000000],
+            'bunches': [21],  # 192
+
+            'slices': [256],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [50],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [3],
+            'approx': [1],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [1],
+            'workers': [1],
+            'omp': [16],
+            'mpi': ['openmpi4'],
+            'time': [60],
+            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
+            'cores_per_cpu': [16, 16]
+
+            'repeats': 3
+        },
+
+
+        'rds-timing-gpu': {
+            'exe': ['PS_main.py'],
+            'particles': [16000000],
+            'bunches': [21],  # 192
+
+            'slices': [256],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [50],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [2],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [1],
+            'workers': [1],
+            'omp': [16],
+            'mpi': ['openmpi4'],
+            'time': [60],
+            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
+            'cores_per_cpu': [16, 16]
+
+            'repeats': 3
+        },
+
+        'exact-timing-gpu': {
+            'exe': ['PS_main.py'],
+            'particles': [16000000],
+            'bunches': [21],  # 192
+
+            'slices': [256],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [50],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [1],
+            #'workers': [1, 2, 4],
+            'workers': [1],
+            'omp': [16],
+            'mpi': ['openmpi4'],
+            'time': [60],
+            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
+            'cores_per_cpu': [16, 16]
+
+            'repeats': 3
+        },
+
+
+        'float32-timing-gpu': {
+            'exe': ['PS_main.py'],
+            'particles': [16000000],
+            'bunches': [21],  # 192
+
+            'slices': [256],
+            'turns': [10000],
+            'monitor': [0],
+            'seed': [0],
+            'mtw': [50],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'gpu': [1],
+            #'workers': [1, 2, 4],
+            'workers': [1],
+            'omp': [16],
+            'mpi': ['openmpi4'],
+            'time': [60],
+            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
+            'cores_per_cpu': [16, 16]
+
+            'repeats': 3
+        },
+    }
 
 
 slurm: 
@@ -39,11 +232,11 @@ slurm:
 
         # GPU only experiments
         # - 'approx0-weak-scaling-gpu-1pn'
-        - 'approx0-weak-scaling-gpu-2pn'
+        # - 'approx0-weak-scaling-gpu-2pn'
         # - 'tp-approx0-weak-scaling-gpu'
 
-        - 'approx0-strong-scaling-gpu-1pn' 
-        - 'approx0-strong-scaling-gpu-2pn'
+        # - 'approx0-strong-scaling-gpu-1pn' 
+        # - 'approx0-strong-scaling-gpu-2pn'
         # - 'tp-approx0-strong-scaling-gpu'
 
         # - 'lb-tp-approx0-weak-scaling-gpu'
@@ -57,11 +250,11 @@ slurm:
         
         # Approximate 
         - 'srp-timing-gpu' # DONE
-        - 'rds-timing-gpu' # DONE 
+        # - 'rds-timing-gpu' # DONE 
         - 'exact-timing-gpu' # DONE 
         - 'float32-timing-gpu'  # DONE 
         - 'f32-srp-timing-gpu' # DONE
-        - 'f32-rds-timing-gpu' # DONE
+        # - 'f32-rds-timing-gpu' # DONE
 
         # Approximate CPU
         # - 'srp-timing-cpu' DONE
@@ -71,12 +264,6 @@ slurm:
         # - 'f32-srp-timing-cpu' 
         # - 'f32-rds-timing-cpu' 
 
-        # - f32-rds-monitor
-        # - f32-srp-monitor
-        # - exact-monitor
-        # - srp-monitor
-        # - rds-monitor
-        # - f32-monitor
 
 
 
@@ -85,8 +272,9 @@ slurm:
         # Approximate
         'f32-srp-timing-gpu': {
             'exe': ['PS_main.py'],
-            'particles': [1000000, 2000000, 4000000, 8000000, 16000000],
-            'bunches': [21], 
+            'particles': [16000000],
+            'bunches': [21],  # 192
+
             'slices': [256],
             'turns': [10000],
             'monitor': [0],
@@ -94,25 +282,29 @@ slurm:
             'mtw': [50],
             'precision': ['single'],
             'withtp': [0],
-            'reduce': [2, 2, 2, 2, 2, 3, 3, 3, 3, 3],
+            'reduce': [3],
             'approx': [1],
             'log': [1],
             'loadbalance': ['reportonly,,,,'],
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [1],
-            'workers': [1, 2, 4, 8, 16], 
-            'omp': [20],
+            'workers': [1],
+            'omp': [16],
             'mpi': ['openmpi4'],
             'time': [60],
+            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
+            'cores_per_cpu': [16, 16]
+
             'repeats': 3
         },
 
 
         'f32-rds-timing-gpu': {
             'exe': ['PS_main.py'],
-            'particles': [1000000, 2000000, 4000000, 8000000, 16000000],
-            'bunches': [21], 
+            'particles': [16000000],
+            'bunches': [21],  # 192
+
             'slices': [256],
             'turns': [10000],
             'monitor': [0],
@@ -127,18 +319,22 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [1],
-            'workers': [1, 2, 4, 8, 16], 
-            'omp': [20],
+            'workers': [1],
+            'omp': [16],
             'mpi': ['openmpi4'],
             'time': [60],
+            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
+            'cores_per_cpu': [16, 16]
+
             'repeats': 3
         },
 
 
         'srp-timing-gpu': {
             'exe': ['PS_main.py'],
-            'particles': [1000000, 2000000, 4000000, 8000000, 16000000], #, 400000],
-            'bunches': [21],  # 96
+            'particles': [16000000],
+            'bunches': [21],  # 192
+
             'slices': [256],
             'turns': [10000],
             'monitor': [0],
@@ -146,25 +342,28 @@ slurm:
             'mtw': [50],
             'precision': ['double'],
             'withtp': [0],
-            'reduce': [2, 2, 2, 2, 2, 3, 3, 3, 3, 3],
+            'reduce': [3],
             'approx': [1],
             'log': [1],
             'loadbalance': ['reportonly,,,,'],
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [1],
-            'workers': [1, 2, 4, 8, 16], 
-            'omp': [20],
+            'workers': [1],
+            'omp': [16],
             'mpi': ['openmpi4'],
             'time': [60],
+            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
+            'cores_per_cpu': [16, 16]
+
             'repeats': 3
         },
 
 
         'rds-timing-gpu': {
             'exe': ['PS_main.py'],
-            'particles': [1000000, 2000000, 4000000, 8000000, 16000000], #, 400000],
-            'bunches': [21],  # 96
+            'particles': [16000000],
+            'bunches': [21],  # 192
 
             'slices': [256],
             'turns': [10000],
@@ -180,17 +379,21 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [1],
-            'workers': [1, 2, 4, 8, 16], 
-            'omp': [20],
+            'workers': [1],
+            'omp': [16],
             'mpi': ['openmpi4'],
             'time': [60],
+            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
+            'cores_per_cpu': [16, 16]
+
             'repeats': 3
         },
 
         'exact-timing-gpu': {
             'exe': ['PS_main.py'],
-            'particles': [1000000, 2000000, 4000000, 8000000, 16000000], #, 400000],
-            'bunches': [21],  # 96
+            'particles': [16000000],
+            'bunches': [21],  # 192
+
             'slices': [256],
             'turns': [10000],
             'monitor': [0],
@@ -206,18 +409,22 @@ slurm:
             'timing': ['timing'],
             'gpu': [1],
             #'workers': [1, 2, 4],
-            'workers': [1, 2, 4, 8, 16], #, 16],
-            'omp': [20],
+            'workers': [1],
+            'omp': [16],
             'mpi': ['openmpi4'],
             'time': [60],
+            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
+            'cores_per_cpu': [16, 16]
+
             'repeats': 3
         },
 
 
         'float32-timing-gpu': {
             'exe': ['PS_main.py'],
-            'particles': [1000000, 2000000, 4000000, 8000000, 16000000], #, 400000],
-            'bunches': [21],  # 96
+            'particles': [16000000],
+            'bunches': [21],  # 192
+
             'slices': [256],
             'turns': [10000],
             'monitor': [0],
@@ -232,10 +439,14 @@ slurm:
             'artificialdelay': ['off'],
             'timing': ['timing'],
             'gpu': [1],
-            'workers': [1, 2, 4, 8, 16], #, 16],
-            'omp': [20],
+            #'workers': [1, 2, 4],
+            'workers': [1],
+            'omp': [16],
             'mpi': ['openmpi4'],
             'time': [60],
+            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
+            'cores_per_cpu': [16, 16]
+
             'repeats': 3
         },
 
