--- a/scripts/scan/lhc_configs.yml
+++ b/scripts/scan/lhc_configs.yml
@@ -15,7 +15,7 @@ evolve:
         'f32-srp-timing-gpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [12],
+            'bunches': [192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -23,7 +23,7 @@ evolve:
             'mtw': [0],
             'precision': ['single'],
             'withtp': [0],
-            'reduce': [2, 3],
+            'reduce': [3],
             'approx': [1],
             'log': [1],
             'loadbalance': ['reportonly,,,,'],
@@ -42,7 +42,7 @@ evolve:
         'f32-rds-timing-gpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [12],
+            'bunches': [192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -70,7 +70,7 @@ evolve:
         'srp-timing-gpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [12],
+            'bunches': [192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -78,7 +78,7 @@ evolve:
             'mtw': [0],
             'precision': ['double'],
             'withtp': [0],
-            'reduce': [2, 3],
+            'reduce': [3],
             'approx': [1],
             'log': [1],
             'loadbalance': ['reportonly,,,,'],
@@ -98,7 +98,7 @@ evolve:
         'rds-timing-gpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [12],
+            'bunches': [192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -126,7 +126,7 @@ evolve:
         'exact-timing-gpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [12],
+            'bunches': [192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
@@ -154,7 +154,7 @@ evolve:
         'float32-timing-gpu': {
             'exe': ['LHC_main.py'],
             'particles': [1500000],
-            'bunches': [12],
+            'bunches': [192],
             'slices': [1000],
             'turns': [10000],
             'monitor': [0],
