--- a/scripts/scan/lhc_configs.yml
+++ b/scripts/scan/lhc_configs.yml
@@ -35,7 +35,7 @@ evolve:
             'mpi': ['openmpi4'],
             'time': [60],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16]
+            'cores_per_cpu': [16, 16],
             'repeats': 3
         },
 
@@ -60,7 +60,7 @@ evolve:
             'workers': [1],
             'omp': [16],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16]
+            'cores_per_cpu': [16, 16],
 
             'mpi': ['openmpi4'],
             'time': [60],
@@ -89,7 +89,7 @@ evolve:
             'omp': [16],
             'mpi': ['openmpi4'],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16]
+            'cores_per_cpu': [16, 16],
 
             'time': [60],
             'repeats': 3
@@ -117,7 +117,7 @@ evolve:
             'omp': [16],
             'mpi': ['openmpi4'],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16]
+            'cores_per_cpu': [16, 16],
 
             'time': [60],
             'repeats': 3
@@ -145,7 +145,7 @@ evolve:
             'omp': [16],
             'mpi': ['openmpi4'],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16]
+            'cores_per_cpu': [16, 16],
 
             'time': [60],
             'repeats': 3
@@ -173,7 +173,7 @@ evolve:
             'omp': [16],
             'mpi': ['openmpi4'],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16]
+            'cores_per_cpu': [16, 16],
 
             'time': [60],
             'repeats': 3
