--- a/scripts/scan/ps_configs.yml
+++ b/scripts/scan/ps_configs.yml
@@ -35,7 +35,7 @@ evolve:
             'mpi': ['openmpi4'],
             'time': [60],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16]
+            'cores_per_cpu': [16, 16],
 
             'repeats': 3
         },
@@ -65,7 +65,7 @@ evolve:
             'mpi': ['openmpi4'],
             'time': [60],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16]
+            'cores_per_cpu': [16, 16],
 
             'repeats': 3
         },
@@ -95,7 +95,7 @@ evolve:
             'mpi': ['openmpi4'],
             'time': [60],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16]
+            'cores_per_cpu': [16, 16],
 
             'repeats': 3
         },
@@ -125,7 +125,7 @@ evolve:
             'mpi': ['openmpi4'],
             'time': [60],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16]
+            'cores_per_cpu': [16, 16],
 
             'repeats': 3
         },
@@ -155,7 +155,7 @@ evolve:
             'mpi': ['openmpi4'],
             'time': [60],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16]
+            'cores_per_cpu': [16, 16],
 
             'repeats': 3
         },
@@ -186,7 +186,7 @@ evolve:
             'mpi': ['openmpi4'],
             'time': [60],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16]
+            'cores_per_cpu': [16, 16],
 
             'repeats': 3
         },
